[Autofill] Regex for credit card number heuristics

For a label to represent a credit card number having the word number
is not enough. We need to make sure the label doesn't contain the
words that denote other fields such as document or phone.

Test added.

Bug: 865838
Change-Id: I06f606b8a324336509dcccbcce98262d43cd00f0
Reviewed-on: https://chromium-review.googlesource.com/1148960
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578025}
Former-commit-id: 6fe8d29cebf89cb8ed5c11ade2a7ba4ff5f0e7e3